--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "7.2.4",
     "react-scripts": "4.0.0",
     "redux": "4.1.1",
+    "redux-devtools-extension": "2.13.9",
     "redux-logger": "3.0.6"
   },
   "devDependencies": {
