--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "0.21.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.4",
     "react-scripts": "4.0.0",
     "redux": "4.1.1",
     "redux-devtools-extension": "2.13.9",
-    "redux-logger": "3.0.6"
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
